--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A node API for serving the Ghibli API data",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "start-dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
